--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,8 +75,36 @@
 
       </header>
       <section>
+        <a href="#" class="github-edit" target="_blank">
+          <svg
+             xmlns:svg="http://www.w3.org/2000/svg"
+             xmlns="http://www.w3.org/2000/svg"
+             viewBox="0 0 43.438667 42.366489"
+             height="42.366489"
+             width="43.438667"
+             xml:space="preserve"
+             id="svg4011"
+             version="1.1"><defs
+               id="defs4015"><clipPath
+                 id="clipPath4029"
+                 clipPathUnits="userSpaceOnUse"><path
+                   id="path4027"
+                   d="M 0,551.986 H 530.973 V 0 H 0 Z" /></clipPath></defs><g
+               transform="matrix(1.3333333,0,0,-1.3333333,-181.7604,592.72719)"
+               id="g4019"><path
+                 d="m 152.6083,444.5454 c -8.995,0 -16.288,-7.293 -16.288,-16.29 0,-7.197 4.667,-13.302 11.14,-15.457 0.815,-0.149 1.112,0.354 1.112,0.786 0,0.386 -0.014,1.411 -0.022,2.77 -4.531,-0.984 -5.487,2.184 -5.487,2.184 -0.741,1.881 -1.809,2.382 -1.809,2.382 -1.479,1.011 0.112,0.991 0.112,0.991 1.635,-0.116 2.495,-1.679 2.495,-1.679 1.453,-2.489 3.813,-1.77 4.741,-1.354 0.148,1.053 0.568,1.771 1.034,2.178 -3.617,0.411 -7.42,1.809 -7.42,8.051 0,1.778 0.635,3.232 1.677,4.371 -0.168,0.412 -0.727,2.068 0.159,4.311 0,0 1.368,0.438 4.48,-1.67 1.299,0.361 2.693,0.542 4.078,0.548 1.383,-0.006 2.777,-0.187 4.078,-0.548 3.11,2.108 4.475,1.67 4.475,1.67 0.889,-2.243 0.33,-3.899 0.162,-4.311 1.044,-1.139 1.675,-2.593 1.675,-4.371 0,-6.258 -3.809,-7.635 -7.438,-8.038 0.585,-0.503 1.106,-1.497 1.106,-3.017 0,-2.177 -0.02,-3.934 -0.02,-4.468 0,-0.436 0.293,-0.943 1.12,-0.784 6.468,2.159 11.131,8.26 11.131,15.455 0,8.997 -7.294,16.29 -16.291,16.29"
+                 style="fill:#1b1817;fill-opacity:1;fill-rule:evenodd;stroke:none"
+                 id="path4033" /><g
+                 transform="translate(350.6088,493.5547)"
+                 id="g4035" /><g
+                 transform="translate(158.1572,332.3769)"
+                 id="g4129" /></g></svg>edit
+        </a>
+        <script>
+          document.getElementsByClassName("github-edit")[0].href = "https://github.com/ibm-watson-embedded-business-assistant/eba-example-agents/edit/master" + window.location.pathname.replace(/.html$/, ".md")
+        </script>
 
-      {{ content }}
+        {{ content }}
 
       </section>
       <footer>
