--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,6 +87,19 @@ a {
     padding: 30px;
     margin-right: 30px;
     padding-right: calc(100% - 270px - 800px); }
+    .wrapper section .github-edit {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      color: #323232;
+      text-decoration: none;
+      font-size: 14px; }
+      .wrapper section .github-edit svg {
+        width: 14px;
+        height: 14px;
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 4px; }
     .wrapper section em {
       font-family: "Helvetica Neue for IBM", Helvetica, Arial, sans-serif;
       font-weight: 300; }
