--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,8 @@
                  transform="translate(350.6088,493.5547)"
                  id="g4035" /><g
                  transform="translate(158.1572,332.3769)"
-                 id="g4129" /></g></svg>edit
+                 id="g4129" /></g></svg>
+          edit article
         </a>
         <script>
           document.getElementsByClassName("github-edit")[0].href = "https://github.com/ibm-watson-embedded-business-assistant/eba-example-agents/edit/master" + window.location.pathname.replace(/.html$/, ".md")
