--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="https://www.eba.ai/">Watson Embedded Business Assistant</a>
+          <a href="https://www.eba.ai/">IBM Embedded Business Assistant</a>
           <button class="btn btn-link" onclick="document.getElementsByTagName('header')[0].classList.toggle('opened')">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                width="30px" height="30px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
@@ -63,12 +63,12 @@
         <h2>Selected articles</h2>
         <ul class="index">
           <li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
-          <li data-level="0"><a href="/docs/LandingPage.html">Programming Watson Assistant</a></li>
+          <li data-level="0"><a href="/docs/LandingPage.html">Programming EBA</a></li>
 <!--           <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li> -->
 <!--           <li data-level="1"><a href="/docs/components/Patterns.html">Patterns</a></li> -->
 <!--           <li data-level="1"><a href="/docs/components/Actions.html">Actions</a></li> -->
 <!--           <li data-level="1"><a href="/docs/components/Rules.html">Rules</a></li> -->
-          <li data-level="0"><a href="/docs/articles/DebuggingWatsonAssistant.html">Debugging Watson Assistant</a></li>
+          <li data-level="0"><a href="/docs/articles/DebuggingWatsonAssistant.html">Debugging EBA</a></li>
           <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
           <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
