--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,9 @@
 <!--           <li data-level="1"><a href="/docs/components/Actions.html">Actions</a></li> -->
 <!--           <li data-level="1"><a href="/docs/components/Rules.html">Rules</a></li> -->
           <li data-level="0"><a href="/docs/articles/DebuggingWatsonAssistant.html">Debugging EBA</a></li>
-          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
+          <li data-level="0"><a href="/docs/integration/Web.html">Web integration</a></li>
+          <li data-level="0"><a href="/docs/integration/Headless.html">Headless integration</a></li>
+<!--           <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li> -->
           <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
 
