--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -138,7 +138,7 @@
         disable_shadow: true
       }
     </script>
-    <script src="https://eba.ibm.com/static/assistant.js" defer></script>
+    <script src="https://eba.ibm.com/static/assistant.js"></script>
     <!--script src="https://cdnjs.cloudflare.com/ajax/libs/fastclick/1.0.6/fastclick.min.js" defer></script-->
   </body>
 </html>
