--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>
-          <a href="https://www.eba.ai/">IBM Embedded Business AI Framwework</a>
+          <a href="https://www.eba.ai/">IBM Embedded Business AI Framework</a>
           <button class="btn btn-link" onclick="document.getElementsByTagName('header')[0].classList.toggle('opened')">
             <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                width="30px" height="30px" viewBox="0 0 30 30" style="enable-background:new 0 0 30 30;" xml:space="preserve">
