--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,7 @@
         <h2>Selected articles</h2>
         <ul class="index">
           <li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
+          <li data-level="0"><a href="/docs/articles/NLUBestPractices.html">Best practicies</a></li>
           <li data-level="0"><a href="/docs/LandingPage.html">Programming EBA</a></li>
           <li data-level="0"><a href="/docs/components/Components.html">EBA components</a></li>
 <!--           <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li> -->
