--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,8 +59,15 @@
             a.style.display = "inline-block"
           }
         </script>
+
+        <h2>General</h2>
         
-        <h2>Selected articles</h2>
+        <ul class="index">
+          <li data-level="0"><a href="/docs/About.html">About EBA</a></li>
+        </ul>
+        
+        <h2>Developers</h2>
+        
         <ul class="index">
           <li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
           <li data-level="0"><a href="/docs/articles/NLUBestPractices.html">Best practices</a></li>
