--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,7 @@
         <ul class="index">
           <li data-level="0"><a href="/docs/About.html">About EBA</a></li>
           <li data-level="0"><a href="/docs/Features.html">Features</a></li>
+          <li data-level="0"><a href="/release/ReleaseNotes.md">Release notes</a></li>
         </ul>
         
         <h2>Developers</h2>
