fixing h2 tag and spacing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,14 +60,13 @@
           }
         </script>
 
-        <h<h2>General</h2>
+        <h2>General</h2>
 
         <ul class="index">
           <li data-level="0"><a href="/docs/About.html">About EBA</a></li>
           <li data-level="0"><a href="/docs/Features.html">Features</a></li>
           <li data-level="0"><a href="/release/ReleaseNotes.html">Release notes</a></li>
         </ul>
-
 
         <h2>Learn</h2>
 
@@ -83,14 +82,12 @@
           <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
         </ul>
 
-
         <h2>How To</h2>
 
         <ul class="index">
           <li li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
           <li data-level="0"><a href="/docs/LandingPage.html">Programming EBA</a></li>
         </ul>
-
 
         <h2>Reference</h2>
 
@@ -99,7 +96,6 @@
           <li data-level="0"><a href="/docs/integration/Headless.html">Headless integration</a></li>
           <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
-
 
         <h2>Help</h2>
 
