--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,30 +71,19 @@
         <h2>Learn</h2>
 
         <ul class="index">
-          <li data-level="0"><a href="/docs/components/Components.html">EBA components</a></li>
-            <ul>
-              <li data-level="1"><a href="/docs/components/Ontology.html">Ontology</a></li>
-              <li data-level="1"><a href="/docs/components/Patterns.html">Patterns</a></li>
-              <li data-level="1"><a href="/docs/components/Actions.html">Actions</a></li>
-              <li data-level="1"><a href="/docs/components/Rules.html">Rules</a></li>
-            </ul>
-          <li data-level="0"><a href="/docs/articles/NLUBestPractices.html">Best practices</a></li>
-          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
-        </ul>
-
-        <h2>How To</h2>
-
-        <ul class="index">
           <li li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
           <li data-level="0"><a href="/docs/LandingPage.html">Programming EBA</a></li>
+          <li data-level="0"><a href="/docs/components/Components.html">EBA components</a></li>
+          <li data-level="0"><a href="/docs/articles/NLUBestPractices.html">Best practices</a></li>
+          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstatnding.html">Natural language understanding</a></li>
+          <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
 
-        <h2>Reference</h2>
+        <h2>Integration</h2>
 
         <ul class="index">
           <li data-level="0"><a href="/docs/integration/Web.html">Web integration</a></li>
           <li data-level="0"><a href="/docs/integration/Headless.html">Headless integration</a></li>
-          <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
 
         <h2>Help</h2>
