--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
           <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
         </ul>
 
-        <h2>Integration</h2>
+        <h2>Integrate</h2>
 
         <ul class="index">
           <li data-level="0"><a href="/docs/integration/Web.html">Web integration</a></li>
