--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,7 @@
         <ul class="index">
           <li data-level="0"><a href="/docs/integration/Web.html">Web integration</a></li>
           <li data-level="0"><a href="/docs/integration/Headless.html">Headless integration</a></li>
+          <li data-level="0"><a href="/docs/integration/Mobile.html">Mobile integration</a></li>
         </ul>
 
       </header>
