--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,13 +120,13 @@
             Add to Slack
           </a>
         </p>
-        <script>
+        <!--script>
           if (navigator.platform === 'MacIntel' || navigator.platform === 'MacPPC') {
             let a = document.getElementsByClassName('btn-download')[0]
             a.href = "https://ibm.box.com/shared/static/m7wm02x2qdevpacf2u1ugj6koapr37ta.dmg"
             a.style.display = "inline-block"
           }
-        </script>
+        </script-->
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
