--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,34 +41,34 @@
         <!--p>{{ site.description | default: site.github.project_tagline }}</p-->
 
         <ul class="index">
-          <li data-level="0"><a href="/docs/About.html">About EBA</a></li>
-          <li data-level="0"><a href="/docs/Features.html">Features</a></li>
-          <li data-level="0"><a href="/release/ReleaseNotes.html">Release notes</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/About.html">About EBA</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/Features.html">Features</a></li>
+          <li data-level="0"><a href="/eba-example-agents/release/ReleaseNotes.html">Release notes</a></li>
         </ul>
 
         <h2>Learn</h2>
 
         <ul class="index">
-          <li li data-level="0"><a href="/docs/getting-started/GettingStarted.html">Getting started</a></li>
-          <li data-level="0"><a href="/docs/LandingPage.html">Programming EBA</a></li>
-          <li data-level="0"><a href="/docs/components/Components.html">EBA components</a></li>
-          <li data-level="0"><a href="/docs/articles/NLUBestPractices.html">Best practices</a></li>
-          <li data-level="0"><a href="/docs/articles/NaturalLanguageUnderstanding.html">Natural language understanding</a></li>
-          <li data-level="0"><a href="/docs/Samples.html">Example agents</a></li>
+          <li li data-level="0"><a href="/eba-example-agents/docs/getting-started/GettingStarted.html">Getting started</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/LandingPage.html">Programming EBA</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/components/Components.html">EBA components</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/articles/NLUBestPractices.html">Best practices</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/articles/NaturalLanguageUnderstanding.html">Natural language understanding</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/Samples.html">Example agents</a></li>
         </ul>
 
         <h2>Integrate</h2>
 
         <ul class="index">
-          <li data-level="0"><a href="/docs/integration/Web.html">Web integration</a></li>
-          <li data-level="0"><a href="/docs/integration/Headless.html">Headless integration</a></li>
-          <li data-level="0"><a href="/docs/integration/Mobile.html">Mobile integration</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/integration/Web.html">Web integration</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/integration/Headless.html">Headless integration</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/integration/Mobile.html">Mobile integration</a></li>
         </ul>
         
         <h2>Help</h2>
         
         <ul class="index">
-          <li data-level="0"><a href="/docs/articles/DebuggingEBA.html">Debugging EBA</a></li>
+          <li data-level="0"><a href="/eba-example-agents/docs/articles/DebuggingEBA.html">Debugging EBA</a></li>
         </ul>
 
       </header>
